recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:13: error: not found: value lenght
      recule(lenght)
             ^Tree:17: error: not found: value lenght
        recule(lenght*(shrink**k))
               ^Tree:17: error: value ** is not a member of Double
        recule(lenght*(shrink**k))
                             ^